--- a/Khareedloo/src/app/components/admin/products/products.component.css
+++ b/Khareedloo/src/app/components/admin/products/products.component.css
@@ -1,42 +1,80 @@
 .mainpanel{
-    height: 100%;
-    background-color:#eaeaea;
-  }
-  .pagetitle{
-    font-weight: 700;
-    font-size: 27px;
-    
-  }
-  .option{
-    display: flex;
-    justify-content: flex-end;
-  }
-  .search-block{
-    width: 220px;
-    
-  }
-  .search{
-    border:1px solid #999999;
-    border-radius: 20px;
+  height: 100%;
+  background-color: #eaeaea;
+}
+.pagetitle{
+  font-weight: 700;
+  font-size: 27px;
   
-  }
-  #search-icon{
-    color: #999999;
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-  .search-button{
-    border:1px solid #999999;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;    
-    background-color: white;  
-  }
-  .fa-pencil-square-o{
-   cursor: pointer; 
-  }
- .fa-trash{
-   margin-left: 15px;
-   color: #CD5C5C;
-   cursor: pointer;
- }
+}
+.option{
+  display: flex;
+  justify-content: flex-end;
+}
+.search-block{
+  width: 220px;
   
+}
+.serach{
+  border:1px solid #999999;
+  border-radius: 20px;
+
+}
+#search-icon{
+  color: #999999;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.search-button{
+  border:1px solid #999999;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;    
+  background-color: white;  
+}
+
+
+
+.card-footer{
+  height: 45px !important;
+  font-family: sans-serif;
+  text-align: center;
+  color: white;
+  background-color:rgba(34, 49, 63, 1) !important;
+}
+.card-header{
+  height: 40px !important;
+  font-family: sans-serif;
+  text-align: center;
+  color: white;
+  background-color:rgba(34, 49, 63, 1) !important;
+}
+.modal-content{
+  color: black;
+  
+}
+.fa{
+  cursor: pointer;
+  
+
+}
+.icon li :hover{
+  color: black;
+ 
+  
+}
+
+.icon {
+  position: relative;
+  top:44px;
+  left: 3px;
+background-image: linear-gradient(to bottom,rgba(255, 0, 0, 0),rgba(0, 0, 0, 1));
+z-index: 1;
+height: 27px;
+color: white;
+width: 235px;
+
+}
+.modal{
+  z-index: 100px;
+}
+
