--- a/Khareedloo/src/app/components/carousel/carousel.component.html
+++ b/Khareedloo/src/app/components/carousel/carousel.component.html
@@ -6,13 +6,13 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="https://www.topgear.com/sites/default/files/styles/fit_1960x1102/public/images/news-article/carousel/2018/12/a024a98d35d499e05aedecf581005f49/mclaren_720s_spider_dec_2018_image_002.jpg?itok=L_ZLNoJ9" alt="First slide">
+        <img class="w-100" height="470px" src="https://s1.1zoom.me/big0/721/356416-admin.jpg" alt="First slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="https://www.topgear.com/sites/default/files/styles/fit_1960x1102/public/cars-car/carousel/2017/05/mclaren-720s-thedrive-383.jpg?itok=4Snhw-FA" alt="Second slide">
+        <img class="w-100" height="470px" src="https://cdn.homeshopping.pk/product_images/b/980/home-theater-installers-blk-orange-1000x412__14027_zoom.jpg" alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="https://static.cargurus.com/images/site/2019/07/31/11/29/2020_mclaren_720s-pic-7755557178050723677-1600x1200.png" alt="Third slide">
+        <img class="w-100" height="470px" src="https://messapps.com/wp-content/uploads/2014/12/sara-kurfess-6lcT2kRPvnI-unsplash-1024x450.jpg" alt="Third slide">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
